# furry-barnacle

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.ci/: python_check_complexity.sh  python_check_linter.sh  python_check_static_typing.sh  python_check_style.sh  python_check_tests.sh  python_checks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pychecks.yml  python_checks.yml
furry_barnacle/: inspect_flowchart_shapes.py  starter_diagrams.py
