[tool.poetry]
name = "furry-barnacle"
version = "0.1.0"
description = "step by step"
authors = ["20210716"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "furry_barnacle"}]

[tool.poetry.dependencies]
python = "^3.9"
diagrams = "^0.20.0"
peewee = "^3.14.4"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.6-beta.0"
mypy = "^0.910"
pylint = "^2.9.3"
pytest = "^6.2.4"
types-python-dateutil = "^0.1.4"
types-PyYAML = "^5.4.3"
types-requests = "^2.25.0"
xenon = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
